--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <header>
         <div class="nav-bar">
             <div class="logo">
-                
-                <img src="images/logo.png" alt="">
-                <div class="search-iput">
+
+                <img src="images/logo1.png" alt="">
+                <div class="search-input">
 
                     <input type="text" placeholder="Type to search">
                         <i class="fas fa-search"></i>
