--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <script src="app.js"></script>
     <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="responsive.css">
     <title>საქართველოს მეფეები</title>
 </head>
 <body>
